--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@apollo/react-hooks": "^4.0.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
-    "@reduxjs/toolkit": "^1.6.1",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@redux-devtools/extension": "^3.2.2",
+    "@reduxjs/toolkit": "^1.7.2",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
@@ -15,10 +17,16 @@
     "isomorphic-fetch": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-toastify": "^5.4.0",
     "react-use": "^17.2.4",
     "rebound": "^0.1.0",
+    "recharts": "^2.1.9",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
+    "redux-saga-effects": "^1.1.0",
     "subscriptions-transport-ws": "^0.9.19",
+    "urql": "^2.1.3",
     "yarn": "^1.22.17"
   },
   "scripts": {
