--- a/package.json
+++ b/package.json
@@ -3,32 +3,29 @@
   "version": "2.0.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.3.21",
-    "@apollo/react-hooks": "^4.0.0",
-    "@material-ui/core": "^4.12.2",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
-    "@redux-devtools/extension": "^3.2.2",
-    "@reduxjs/toolkit": "^1.7.2",
+    "@material-ui/core": "^4.9.10",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-redux": "^7.1.5",
+    "@types/recharts": "^1.8.16",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.29.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-redux": "^7.1.3",
+    "react-scripts": "^3.2.0",
     "react-toastify": "^5.4.0",
-    "react-use": "^17.2.4",
+    "react-use": "^13.6.3",
     "rebound": "^0.1.0",
-    "recharts": "^2.1.9",
-    "redux": "^4.1.2",
-    "redux-saga": "^1.1.3",
-    "redux-saga-effects": "^1.1.0",
-    "subscriptions-transport-ws": "^0.9.19",
-    "urql": "^2.1.3",
-    "yarn": "^1.22.17"
+    "recharts": "^1.8.5",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.1",
+    "redux-starter-kit": "^1.0.1",
+    "typescript": "^3.7.2",
+    "urql": "^1.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,21 +43,18 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.5",
-    "@typescript-eslint/parser": "^4.28.5",
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
+    "@typescript-eslint/parser": "^2.7.0",
     "concurrently": "^5.0.0",
-    "eslint": "^7.11.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-flowtype": "^4.2.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.2",
-    "react-scripts": "^4.0.3",
-    "typescript": "^4.3.5"
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.2.0",
+    "prettier": "^1.18.2",
+    "redux-devtools-extension": "^2.13.5"
   }
 }
